Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-06-02 (SVN):
    * docs/AUTHORS: Added Szilard Biro under contributors->coding for
      the Amiga/AROS support.
    * Updated ReleaseNotes file.

2012-06-02 (SVN):
    * engine/hexen2/sys_amiga.c: Support for Amiga (AROS), many thanks
      to Szilard Biro.
    * engine/hexen2/Makefile, scripts/makefile.inc: Add adjustments for
      aros.
    * updated version date stamp to 2012-06-02.

2012-06-01 (SVN):
    * h2patch/h2patch3.c, launcher/apply_patch.c: The patch process now
      outputs a description of the pak file it is processing so that the
      user can understand the reasons of a probable failure better.
    * launcher: bumped version to 1.0.8
    * updated version date stamp to 2012-06-01.

2012-06-01 (SVN):
    * Changed the place where DO_USERDIRS may be disabled on purpose for
      some platforms from quakefs.h to sys.h. Added proper DO_USERDIRS
      macro usage to hwmaster.

2012-05-31 (SVN):
    * quakefs.h: Added Amiga to list of platforms where we don't need
      user directories.

2012-05-31 (SVN):
    * gl_draw.c (Draw_CacheLoadingPic): When moving pixels, do not take
      the start point as data[3]: data[0], i.e. data itself, should be
      just OK. (can't remember why I did it that way, but I noticed it
      thanks to a weird "array subscript is above array bounds" warning
      from g++..

2012-05-31 (SVN):
    * hexenworld/client/cl_main.c (CL_ConnectionlessPacket): Removed the
      extra '&' before the array variable 'data' when sending A2A_ACK,
      also changed its type to byte instead of char.

2012-05-31 (SVN):
    * Changed Sys_FindFirst() and Sys_FindNext() to return const.

2012-05-31 (SVN):
    * Steven reports that uhexen2 works nicely on Solaris: updated the
      release notes and TODO files.

2012-05-31 (SVN):
    * Makefiles: refuse the stupid 'cc' default of make for CC, which
      not necessarily exist everywhere.
